--- a/app/src/main/res/layout/activity_events.xml
+++ b/app/src/main/res/layout/activity_events.xml
@@ -7,7 +7,7 @@
     android:padding="5dp">
 
     <fragment
-        class="com.org.triptrip.EventMaterialFragment"
+        class="com.org.triptrip.fragment.EventMaterialFragment"
         android:id="@+id/events_frag"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
