--- a/app/src/main/res/layout/activity_experiences.xml
+++ b/app/src/main/res/layout/activity_experiences.xml
@@ -7,7 +7,7 @@
     android:padding="5dp">
 
     <fragment
-        class="com.org.triptrip.ExperienceMaterialFragment"
+        class="com.org.triptrip.fragment.ExperienceMaterialFragment"
         android:id="@+id/experience_frag"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
