--- a/app/src/main/res/layout/fragment_event_material.xml
+++ b/app/src/main/res/layout/fragment_event_material.xml
@@ -6,6 +6,6 @@
     android:scrollbars="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".EventMaterialFragment">
+    tools:context=".fragment.EventMaterialFragment">
 
 </android.support.v7.widget.RecyclerView>
