--- a/app/src/main/res/layout/card_experience.xml
+++ b/app/src/main/res/layout/card_experience.xml
@@ -61,6 +61,7 @@
             android:id="@+id/txt_thumb_up"
             android:layout_marginLeft="2dp"
             android:layout_marginBottom="5dp"
+            android:layout_marginRight="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_row="3"
@@ -81,6 +82,7 @@
             android:id="@+id/txt_favorite"
             android:layout_marginLeft="2dp"
             android:layout_marginBottom="5dp"
+            android:layout_marginRight="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_row="3"
@@ -101,11 +103,76 @@
             android:id="@+id/txt_visibility"
             android:layout_marginLeft="2dp"
             android:layout_marginBottom="5dp"
+            android:layout_marginRight="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_row="3"
             android:layout_column="5"
             android:text="65"
+            android:textSize="10sp"/>
+
+
+        <ImageView
+            android:id="@+id/img_chat_bubble"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_row="4"
+            android:layout_column="0"
+            android:src="@drawable/ic_chat_bubble_outline_black_24dp"/>
+
+        <TextView
+            android:id="@+id/txt_chat_bubble"
+            android:layout_marginLeft="2dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="4"
+            android:layout_column="1"
+            android:text="0"
+            android:textSize="10sp"/>
+
+        <ImageView
+            android:id="@+id/img_group"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_row="4"
+            android:layout_column="2"
+            android:src="@drawable/ic_group_black_24dp"/>
+
+        <TextView
+            android:id="@+id/txt_group"
+            android:layout_marginLeft="2dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="4"
+            android:layout_column="3"
+            android:text="15"
+            android:textSize="10sp"/>
+
+        <ImageView
+            android:id="@+id/img_person_add"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_row="4"
+            android:layout_column="4"
+            android:src="@drawable/ic_person_add_black_24dp"/>
+
+        <TextView
+            android:id="@+id/txt_person_add"
+            android:layout_marginLeft="2dp"
+            android:layout_marginBottom="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="4"
+            android:layout_column="5"
+            android:text="40"
             android:textSize="10sp"/>
 
     </GridLayout>
