--- a/app/src/main/res/layout/card_events.xml
+++ b/app/src/main/res/layout/card_events.xml
@@ -2,84 +2,114 @@
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/card_events"
+    android:id="@+id/card_experience"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="2dp"
+    android:layout_margin="5dp"
     card_view:cardCornerRadius="4dp">
 
     <GridLayout
         android:layout_width="match_parent"
-        android:layout_height="fill_parent"
-        android:layout_marginBottom="2dp"
+        android:layout_height="match_parent"
+        android:layout_margin="2dp"
         android:orientation="vertical"
-        android:columnCount="3"
-        android:rowCount="3">
+        android:columnCount="4"
+        android:rowCount="4">
 
         <TextView
-            android:id="@+id/txt_date"
+            android:id="@+id/txt_title"
+            android:layout_marginLeft="5dp"
+            android:layout_marginBottom="5dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_row="0"
+            android:layout_column="0"
+            android:layout_columnSpan="4"
+            android:textStyle="bold"/>
+
+        <ImageView
+            android:id="@+id/img_event_note"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_row="1"
+            android:layout_column="0"
+            android:src="@drawable/ic_event_note_black_24dp"/>
+
+        <TextView
+            android:id="@+id/txt_event_note"
             android:layout_marginLeft="5dp"
             android:layout_marginBottom="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20sp"
-            android:layout_row="0"
+            android:layout_row="1"
+            android:layout_column="1"
+            android:layout_columnSpan="3"
+            android:textStyle="italic"
+            android:textSize="10sp"/>
+
+        <ImageView
+            android:id="@+id/img_place"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_row="2"
             android:layout_column="0"
-            android:layout_rowSpan="3" />
+            android:src="@drawable/ic_place_black_24dp"/>
 
         <TextView
-            android:id="@+id/txt_title"
-            android:layout_marginLeft="10dp"
+            android:id="@+id/txt_place"
+            android:layout_marginLeft="5dp"
             android:layout_marginBottom="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textStyle="bold"
-            android:textSize="25sp"
-            android:layout_columnSpan="2"
-            android:layout_row="0"
-            android:layout_column="1" />
-
-        <TextView
-            android:id="@+id/txt_event_type"
-            android:layout_marginLeft="10dp"
-            android:layout_marginBottom="5dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Event Type: "
-            android:textStyle="italic"
-            android:layout_row="1"
-            android:layout_column="1" />
-
-        <TextView
-            android:id="@+id/txt_event_type_content"
-            android:layout_marginLeft="10dp"
-            android:layout_marginBottom="5dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textStyle="italic"
-            android:layout_row="1"
-            android:layout_column="2" />
-
-        <TextView
-            android:id="@+id/txt_region"
-            android:layout_marginLeft="10dp"
-            android:layout_marginBottom="5dp"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Region: "
-            android:textStyle="italic"
             android:layout_row="2"
-            android:layout_column="1" />
+            android:layout_column="1"
+            android:layout_columnSpan="3"
+            android:textStyle="italic"
+            android:textSize="10sp"/>
+
+        <ImageView
+            android:id="@+id/img_date_range"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_row="3"
+            android:layout_column="0"
+            android:src="@drawable/ic_date_range_black_24dp"/>
 
         <TextView
-            android:id="@+id/txt_region_content"
-            android:layout_marginLeft="10dp"
+            android:id="@+id/txt_from_date"
+            android:layout_marginLeft="5dp"
             android:layout_marginBottom="5dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_row="3"
+            android:layout_column="1"
             android:textStyle="italic"
-            android:layout_row="2"
-            android:layout_column="2" />
+            android:textSize="10sp"/>
+
+        <TextView
+            android:layout_marginLeft="5dp"
+            android:layout_marginBottom="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="-"
+            android:layout_row="3"
+            android:layout_column="2"
+            android:textStyle="italic"
+            android:textSize="10sp"/>
+
+        <TextView
+            android:id="@+id/txt_to_date"
+            android:layout_marginLeft="5dp"
+            android:layout_marginBottom="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_row="3"
+            android:layout_column="3"
+            android:textStyle="italic"
+            android:textSize="10sp"/>
 
     </GridLayout>
 
