--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="colorLoginFacebook">#3b5998</color>
     <color name="colorLoginGoogle">#dd4b39</color>
     <color name="colorLoginLinkedIn">#1f88be</color>
+    <color name="white">#ffffff</color>
 </resources>
