--- a/app/src/main/res/layout/card_events.xml
+++ b/app/src/main/res/layout/card_events.xml
@@ -25,7 +25,8 @@
             android:layout_row="0"
             android:layout_column="0"
             android:layout_columnSpan="4"
-            android:textStyle="bold"/>
+            android:textStyle="bold"
+            />
 
         <ImageView
             android:id="@+id/img_event_note"
