--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -34,8 +34,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:itemBackground="@color/white"
-        app:itemIconTint="@color/colorMain"
-        app:itemTextColor="@color/colorMain"
+        app:itemIconTint="@drawable/custom_navigation_selector"
+        app:itemTextColor="@drawable/custom_navigation_selector"
         app:menu="@menu/navigation"/>
 
 </android.support.constraint.ConstraintLayout>
