--- a/app/src/main/res/layout/content_service_detail.xml
+++ b/app/src/main/res/layout/content_service_detail.xml
@@ -9,18 +9,8 @@
     tools:context=".activity.ServiceDetailActivity"
     tools:showIn="@layout/activity_service_detail"
     android:columnCount="2"
-    android:rowCount="7" >
-
-    <TextView
-        android:id="@+id/txt_img"
-        android:layout_marginLeft="5dp"
-        android:layout_marginBottom="5dp"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_row="0"
-        android:layout_column="0"
-        android:textStyle="italic"
-        android:textSize="10sp"/>
+    android:rowCount="7"
+    android:background="@color/white">
 
     <ImageView
         android:id="@+id/img_title"
@@ -28,8 +18,22 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
         android:layout_row="0"
+        android:layout_column="0"
+        android:src="@drawable/ic_phone_black_24dp"/>
+
+    <TextView
+        android:id="@+id/txt_img"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginBottom="5dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_row="0"
         android:layout_column="1"
-        android:src="@drawable/ic_event_note_black_24dp"/>
+        android:textStyle="normal"
+        android:textSize="12sp"
+        android:layout_gravity="fill_vertical"
+        android:text="Improve your workout results with Oxygen Yoga Fitness Far Infrared Hot Yoga and Fusiion Fitness"/>
 
     <TextView
         android:id="@+id/txt_description"
@@ -45,13 +49,13 @@
 
 
     <ImageView
-        android:id="@+id/img_event_note"
+        android:id="@+id/img_service_detail_phone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
         android:layout_row="2"
         android:layout_column="0"
-        android:src="@drawable/ic_event_note_black_24dp"/>
+        android:src="@drawable/ic_phone_black_24dp"/>
 
     <TextView
         android:id="@+id/txt_event_note"
@@ -62,16 +66,17 @@
         android:layout_row="2"
         android:layout_column="1"
         android:textStyle="italic"
-        android:textSize="10sp"/>
+        android:textSize="10sp"
+        android:text="866 569 9436"/>
 
     <ImageView
-        android:id="@+id/img_place"
+        android:id="@+id/img_service_detail_web"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="5dp"
         android:layout_row="3"
         android:layout_column="0"
-        android:src="@drawable/ic_place_black_24dp"/>
+        android:src="@drawable/ic_web_black_24dp"/>
 
     <TextView
         android:id="@+id/txt_place"
@@ -82,7 +87,8 @@
         android:layout_row="3"
         android:layout_column="1"
         android:textStyle="italic"
-        android:textSize="10sp"/>
+        android:textSize="10sp"
+        android:text="Website" />
 
     <ImageView
         android:id="@+id/img_date_range"
@@ -91,7 +97,7 @@
         android:layout_marginLeft="5dp"
         android:layout_row="4"
         android:layout_column="0"
-        android:src="@drawable/ic_date_range_black_24dp"/>
+        android:src="@drawable/ic_mail_outline_black_24dp"/>
 
     <TextView
         android:id="@+id/txt_from_date"
@@ -102,7 +108,8 @@
         android:layout_row="4"
         android:layout_column="1"
         android:textStyle="italic"
-        android:textSize="10sp"/>
+        android:textSize="10sp"
+        android:text="oxygenfranchises@gmail.com" />
 
     <ImageView
         android:id="@+id/img_date_range_1"
@@ -111,7 +118,7 @@
         android:layout_marginLeft="5dp"
         android:layout_row="5"
         android:layout_column="0"
-        android:src="@drawable/ic_date_range_black_24dp"/>
+        android:src="@drawable/ic_place_black_24dp"/>
 
     <TextView
         android:id="@+id/txt_from_date_1"
@@ -122,12 +129,14 @@
         android:layout_row="5"
         android:layout_column="1"
         android:textStyle="italic"
-        android:textSize="10sp"/>
+        android:textSize="10sp"
+        android:text="434 Eglinton Ave W.Toronto, ON" />
 
     <com.google.android.gms.maps.MapView
         android:id="@+id/map_view"
         android:layout_width="wrap_content"
-        android:layout_height="200dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="fill"
         android:layout_row="6"
         android:layout_column="0"
         android:layout_columnSpan="2" />
