--- a/app/src/main/res/layout/content_service_detail.xml
+++ b/app/src/main/res/layout/content_service_detail.xml
@@ -132,14 +132,25 @@
         android:textSize="10sp"
         android:text="434 Eglinton Ave W.Toronto, ON" />
 
-    <com.google.android.gms.maps.MapView
+    <!--<com.google.android.gms.maps.MapView
         android:id="@+id/map_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="fill"
         android:layout_row="6"
         android:layout_column="0"
-        android:layout_columnSpan="2" />
+        android:layout_columnSpan="2" />-->
 
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="fill"
+        android:layout_row="6"
+        android:layout_column="0"
+        android:layout_columnSpan="2"
+        android:id="@+id/map"
+        tools:context=".activity.ServiceDetailActivity"
+        android:name="com.google.android.gms.maps.SupportMapFragment" />
 
 </GridLayout>
