--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,5 +8,5 @@
     <color name="colorLoginLinkedIn">#1f88be</color>
     <color name="colorMain">#308be6</color>
     <color name="white">#ffffff</color>
-    <color name="textBackground">#186CA5</color>
+    <color name="textBackground">#E9E9E9</color>
 </resources>
