--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -8,7 +8,7 @@
     tools:context=".activity.MainActivity"
     tools:showIn="@layout/app_bar_main">
     <FrameLayout
-        android:id="@+id/frame_fragmentholder"
+        android:id="@+id/frame_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="50dp"
