--- a/app/src/main/res/layout/spinner_order_layout.xml
+++ b/app/src/main/res/layout/spinner_order_layout.xml
@@ -12,7 +12,7 @@
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:paddingLeft="5dp"
