--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -22,7 +22,7 @@
         android:layout_height="fill_parent"
         android:background="#ffffff">
         <FrameLayout
-            android:id="@+id/frame_category_content"
+            android:id="@+id/frame_main_content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             />
