--- a/app/src/main/res/layout/fragment_experience_material.xml
+++ b/app/src/main/res/layout/fragment_experience_material.xml
@@ -2,10 +2,10 @@
 <android.support.v7.widget.RecyclerView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/events_recycler"
+    android:id="@+id/recycler_experiences"
     android:scrollbars="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".fragment.ExperienceMaterialFragment">
+    tools:context=".fragment.ContentFragment">
 
 </android.support.v7.widget.RecyclerView>
