--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,20 +5,24 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
-            android:icon="@drawable/ic_account_circle_black_24dp"
+            android:id="@+id/nav_Home"
+            android:icon="@drawable/ic_home_24dp"
+            android:title="Home" />
+        <item
+            android:id="@+id/nav_information"
+            android:icon="@drawable/ic_account_circle_24dp"
             android:title="Information" />
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_local_see_black_24dp"
+            android:id="@+id/navigation_experiences"
+            android:icon="@drawable/ic_local_see_24dp"
             android:title="Trips" />
         <item
             android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_edit_black_24dp"
+            android:icon="@drawable/ic_edit_24dp"
             android:title="Articles" />
         <item
             android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_event_available_black_24dp"
+            android:icon="@drawable/ic_event_available_24dp"
             android:title="Events" />
     </group>
 
