--- a/app/src/main/res/layout/fragment_service_filter.xml
+++ b/app/src/main/res/layout/fragment_service_filter.xml
@@ -11,7 +11,7 @@
         android:scrollbars="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".fragment.ServiceFilterFragment">
+        tools:context=".fragment.FilterFragment">
     </android.support.v7.widget.RecyclerView>
 
     <LinearLayout
